--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
+.vs/
+# Ignorar archivos de Visual Studio
+.vs/
+bin/
+obj/
+*.user
+*.suo
+*.vsp
+*.log
+*.pdb
+*.cache
 
+# Ignorar configuraciones locales
+appsettings.Local.json
+
+# Ignorar dependencias instaladas
+node_modules/
